# loro-react-native

./: .gitignore  CONTRIBUTING.md  LICENSE  LoroReactNative.podspec  README.md  eslint.config.mjs  loro-react-native.podspec  package.json  react-native.config.js  tsconfig.build.json  tsconfig.json  ubrn.config.yaml
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup-js/: action.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/loro/lororeactnative/: LoroReactNativeModule.kt  LoroReactNativePackage.kt
cpp/: loro-react-native.cpp  loro-react-native.h
example/: app.json  package.json  pnpm-lock.yaml
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/LoroReactNativeExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/LoroReactNativeExample.xcodeproj/: project.pbxproj
example/ios/LoroReactNativeExample.xcodeproj/xcshareddata/xcschemes/: LoroReactNativeExample.xcscheme
example/ios/LoroReactNativeExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: LoroReactNative.h  LoroReactNative.mm
loro-rn/: Cargo.toml
loro-rs/: Cargo.toml
patches/: uniffi-bindgen-react-native+0.28.3-5.patch
scripts/: add-extension.sh
src/: NativeLoroReactNative.ts  extension.ts  index.tsx
src/__tests__/: extension-comprehensive.test.tsx  extension.test.tsx
(+2 files in other folders)
