[package]
name = "loro-rs"
version = "1.5.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
loro-ffi = "1.5.6"
uniffi = { version = "0.28.3" }

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build", "cli"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
